chore: update Rust to 1.88 and use wasm32v1-none

--- a/rust-toolchain.toml
+++ b/rust-toolchain.toml
@@ -1,5 +1,5 @@
 [toolchain]
-channel = "1.86.0"
+channel = "1.88.0"
 components = [
 	"cargo",
 	"clippy",
@@ -10,5 +10,5 @@ components = [
 	"rustc",
 	"rustfmt",
 ]
-targets = ["wasm32-unknown-unknown"]
+targets = ["wasm32v1-none"]
 profile = "minimal"
