--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,17 +40,21 @@ jobs:
         run: |
           set -e
           echo "--- Restoring Rust cache from host ---"
-          if [ -d /tmp/rust-cache ]; then
-            echo "Rust cache found. Restoring..."
-            mkdir -p ~/.cargo/git ~/.cargo/registry ./target
-            nix shell nixpkgs#rsync -c bash -c "
-              rsync -a /tmp/rust-cache/cargo-git/ ~/.cargo/git/
-              rsync -a /tmp/rust-cache/cargo-registry/ ~/.cargo/registry/
-              rsync -a /tmp/rust-cache/target/ ./target/
-            "
-          else
-            echo "No Rust cache found. Will be created after build."
-          fi
+          nix shell nixpkgs#util-linux-flock -c "
+            flock /tmp/rust-cache.lock -c '
+              if [ -d /tmp/rust-cache ]; then
+                echo \"Rust cache found. Restoring...\"
+                mkdir -p ~/.cargo/git ~/.cargo/registry ./target
+                nix shell nixpkgs#rsync -c \" \\
+                  rsync -a /tmp/rust-cache/cargo-git/ ~/.cargo/git/ && \\
+                  rsync -a /tmp/rust-cache/cargo-registry/ ~/.cargo/registry/ && \\
+                  rsync -a /tmp/rust-cache/target/ ./target/ \\
+                \"
+              else
+                echo \"No Rust cache found. Will be created after build.\"
+              fi
+            '
+          "
       - name: Acquire AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
@@ -73,14 +77,21 @@ jobs:
         run: |
           set -e
           echo "--- Saving Rust cache to host cache ---"
-          mkdir -p /tmp/rust-cache
-          nix shell nixpkgs#rsync -c bash -c "
-            rsync -a ~/.cargo/git/ /tmp/rust-cache/cargo-git/
-            rsync -a ~/.cargo/registry/ /tmp/rust-cache/cargo-registry/
-            rsync -a ./target/ /tmp/rust-cache/target/
+          nix shell nixpkgs#util-linux-flock -c "
+            flock /tmp/rust-cache.lock -c '
+              echo \"Acquired lock to save cache\"
+              mkdir -p /tmp/rust-cache-stage/cargo-git /tmp/rust-cache-stage/cargo-registry /tmp/rust-cache-stage/target
+              nix shell nixpkgs#rsync -c \" \\
+                rsync -a --delete ~/.cargo/git/ /tmp/rust-cache-stage/cargo-git/ && \\
+                rsync -a --delete ~/.cargo/registry/ /tmp/rust-cache-stage/cargo-registry/ && \\
+                rsync -a --delete ./target/ /tmp/rust-cache-stage/target/ \\
+              \"
+              rm -rf /tmp/rust-cache
+              mv /tmp/rust-cache-stage /tmp/rust-cache
+              echo \"--- Verifying cache contents ---\"
+              ls -laR /tmp/rust-cache
+            '
           "
-          echo "--- Verifying cache contents ---"
-          ls -laR /tmp/rust-cache
       #- name: Run cargo-deny to check licenses
       #  uses: EmbarkStudios/cargo-deny-action@v1
       #  with:
@@ -257,17 +268,21 @@ jobs:
         run: |
           set -e
           echo "--- Restoring Rust cache from host ---"
-          if [ -d /tmp/rust-cache ]; then
-            echo "Rust cache found. Restoring..."
-            mkdir -p ~/.cargo/git ~/.cargo/registry ./target
-            nix shell nixpkgs#rsync -c bash -c "
-              rsync -a /tmp/rust-cache/cargo-git/ ~/.cargo/git/
-              rsync -a /tmp/rust-cache/cargo-registry/ ~/.cargo/registry/
-              rsync -a /tmp/rust-cache/target/ ./target/
-            "
-          else
-            echo "No Rust cache found. Will be created after build."
-          fi
+          nix shell nixpkgs#util-linux-flock -c "
+            flock /tmp/rust-cache.lock -c '
+              if [ -d /tmp/rust-cache ]; then
+                echo \"Rust cache found. Restoring...\"
+                mkdir -p ~/.cargo/git ~/.cargo/registry ./target
+                nix shell nixpkgs#rsync -c \" \\
+                  rsync -a /tmp/rust-cache/cargo-git/ ~/.cargo/git/ && \\
+                  rsync -a /tmp/rust-cache/cargo-registry/ ~/.cargo/registry/ && \\
+                  rsync -a /tmp/rust-cache/target/ ./target/ \\
+                \"
+              else
+                echo \"No Rust cache found. Will be created after build.\"
+              fi
+            '
+          "
       - name: Get current commit SHA
         id: get_sha
         run: echo "sha=$(git rev-parse HEAD)" >> $GITHUB_OUTPUT
@@ -314,14 +329,21 @@ jobs:
         run: |
           set -e
           echo "--- Saving Rust cache to host cache ---"
-          mkdir -p /tmp/rust-cache
-          nix shell nixpkgs#rsync -c bash -c "
-            rsync -a ~/.cargo/git/ /tmp/rust-cache/cargo-git/
-            rsync -a ~/.cargo/registry/ /tmp/rust-cache/cargo-registry/
-            rsync -a ./target/ /tmp/rust-cache/target/
+          nix shell nixpkgs#util-linux-flock -c "
+            flock /tmp/rust-cache.lock -c '
+              echo \"Acquired lock to save cache\"
+              mkdir -p /tmp/rust-cache-stage/cargo-git /tmp/rust-cache-stage/cargo-registry /tmp/rust-cache-stage/target
+              nix shell nixpkgs#rsync -c \" \\
+                rsync -a --delete ~/.cargo/git/ /tmp/rust-cache-stage/cargo-git/ && \\
+                rsync -a --delete ~/.cargo/registry/ /tmp/rust-cache-stage/cargo-registry/ && \\
+                rsync -a --delete ./target/ /tmp/rust-cache-stage/target/ \\
+              \"
+              rm -rf /tmp/rust-cache
+              mv /tmp/rust-cache-stage /tmp/rust-cache
+              echo \"--- Verifying cache contents ---\"
+              ls -laR /tmp/rust-cache
+            '
           "
-          echo "--- Verifying cache contents ---"
-          ls -laR /tmp/rust-cache
       - name: Rename artifact
         run: |
           cp ./partner-chains-demo-node partner-chains-node-${{ steps.get_sha.outputs.sha }}-x86_64-linux
@@ -510,17 +532,21 @@ jobs:
         run: |
           set -e
           echo "--- Restoring Rust cache from host ---"
-          if [ -d /tmp/rust-cache ]; then
-            echo "Rust cache found. Restoring..."
-            mkdir -p ~/.cargo/git ~/.cargo/registry ./target
-            nix shell nixpkgs#rsync -c bash -c "
-              rsync -a /tmp/rust-cache/cargo-git/ ~/.cargo/git/
-              rsync -a /tmp/rust-cache/cargo-registry/ ~/.cargo/registry/
-              rsync -a /tmp/rust-cache/target/ ./target/
-            "
-          else
-            echo "No Rust cache found. Will be created after build."
-          fi
+          nix shell nixpkgs#util-linux-flock -c "
+            flock /tmp/rust-cache.lock -c '
+              if [ -d /tmp/rust-cache ]; then
+                echo \"Rust cache found. Restoring...\"
+                mkdir -p ~/.cargo/git ~/.cargo/registry ./target
+                nix shell nixpkgs#rsync -c \" \\
+                  rsync -a /tmp/rust-cache/cargo-git/ ~/.cargo/git/ && \\
+                  rsync -a /tmp/rust-cache/cargo-registry/ ~/.cargo/registry/ && \\
+                  rsync -a /tmp/rust-cache/target/ ./target/ \\
+                \"
+              else
+                echo \"No Rust cache found. Will be created after build.\"
+              fi
+            '
+          "
       - name: Acquire AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
@@ -543,14 +569,21 @@ jobs:
         run: |
           set -e
           echo "--- Saving Rust cache to host cache ---"
-          mkdir -p /tmp/rust-cache
-          nix shell nixpkgs#rsync -c bash -c "
-            rsync -a ~/.cargo/git/ /tmp/rust-cache/cargo-git/
-            rsync -a ~/.cargo/registry/ /tmp/rust-cache/cargo-registry/
-            rsync -a ./target/ /tmp/rust-cache/target/
+          nix shell nixpkgs#util-linux-flock -c "
+            flock /tmp/rust-cache.lock -c '
+              echo \"Acquired lock to save cache\"
+              mkdir -p /tmp/rust-cache-stage/cargo-git /tmp/rust-cache-stage/cargo-registry /tmp/rust-cache-stage/target
+              nix shell nixpkgs#rsync -c \" \\
+                rsync -a --delete ~/.cargo/git/ /tmp/rust-cache-stage/cargo-git/ && \\
+                rsync -a --delete ~/.cargo/registry/ /tmp/rust-cache-stage/cargo-registry/ && \\
+                rsync -a --delete ./target/ /tmp/rust-cache-stage/target/ \\
+              \"
+              rm -rf /tmp/rust-cache
+              mv /tmp/rust-cache-stage /tmp/rust-cache
+              echo \"--- Verifying cache contents ---\"
+              ls -laR /tmp/rust-cache
+            '
           "
-          echo "--- Verifying cache contents ---"
-          ls -laR /tmp/rust-cache
       #- name: Run cargo-deny to check licenses
       #  uses: EmbarkStudios/cargo-deny-action@v1
       #  with:
